# youtube-viewer

./: CMakeLists.txt  README.md  kant-loader.qrc  loader.html  main.cpp  window.cpp  window.h
.github/workflows/: cmake.yml
